Launcher/launcher.template.pdx.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  vpc051c6862:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 172.31.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: Default
#  subnet77a80e3e:
#    Type: 'AWS::EC2::Subnet'
#    Properties:
#      CidrBlock: 172.31.32.0/20
#      AvailabilityZone: us-west-2a
#      VpcId: !Ref vpc051c6862
#  subnet39a22e5e:
#    Type: 'AWS::EC2::Subnet'
#    Properties:
#      CidrBlock: 172.31.16.0/20
#      AvailabilityZone: us-west-2b
#      VpcId: !Ref vpc051c6862
#  subnetdba7a083:
#    Type: 'AWS::EC2::Subnet'
#    Properties:
#      CidrBlock: 172.31.0.0/20
#      AvailabilityZone: us-west-2c
#      VpcId: !Ref vpc051c6862
#  igw18f6c47c:
#    Type: 'AWS::EC2::InternetGateway'
#    Properties: {}
#  dopt49520a2d:
#    Type: 'AWS::EC2::DHCPOptions'
#    Properties:
#      DomainName: us-west-2.compute.internal
#      DomainNameServers:
#        - AmazonProvidedDNS
#  aclbec0e1d9:
#    Type: 'AWS::EC2::NetworkAcl'
#    Properties:
#      VpcId: !Ref vpc051c6862
#  rtb26b7a041:
#    Type: 'AWS::EC2::RouteTable'
#    Properties:
#      VpcId: !Ref vpc051c6862
#  eip3420914575:
#    Type: 'AWS::EC2::EIP'
#    DependsOn:
#      - gw1
#    Properties:
#      Domain: vpc
  LauncherHost:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: ami-8ca83fec
      InstanceType: t2.micro
      KeyName: devenv-key
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: launcher
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          DeviceIndex: 0
          SubnetId: !Ref subnet77a80e3e
          PrivateIpAddresses:
            - PrivateIpAddress: 172.31.32.146
              Primary: 'true'
          GroupSet:
            - !Ref sgdevenvsg
  DefaultSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for Sandbox Architecture
      VpcId: !Ref vpc051c6862
  acl1:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref aclbec0e1d9
  acl2:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref aclbec0e1d9
  subnetacl1:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref aclbec0e1d9
      SubnetId: !Ref subnet77a80e3e
  subnetacl2:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref aclbec0e1d9
      SubnetId: !Ref subnetdba7a083
  subnetacl3:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref aclbec0e1d9
      SubnetId: !Ref subnet39a22e5e
  gw1:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref vpc051c6862
      InternetGatewayId: !Ref igw18f6c47c
  route1:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref rtb26b7a041
      GatewayId: !Ref igw18f6c47c
    DependsOn: gw1
  dchpassoc1:
    Type: 'AWS::EC2::VPCDHCPOptionsAssociation'
    Properties:
      VpcId: !Ref vpc051c6862
      DhcpOptionsId: !Ref dopt49520a2d
  assoc1:
    Type: 'AWS::EC2::EIPAssociation'
    Properties:
      AllocationId: !GetAtt 
        - eip3420914575
        - AllocationId
      InstanceId: !Ref instancei001faf4d784693e0d
  ingress1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sgdevenvsg
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      CidrIp: 0.0.0.0/0
  egress1:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      GroupId: !Ref sgdevenvsg
      IpProtocol: '-1'
      CidrIp: 0.0.0.0/0
Description: Default launcher node CloudFormation template for the Sandbox Architecture
